Finish User Login and Create
- refactor
- add hash password

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 fastapi = "^0.68.1"
 SQLAlchemy = "^1.4.25"
 mysqlclient = "^2.0.3"
+PyJWT = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 
