--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-fastapi = "<0.64.0"
+fastapi = {extras = ["all"], version = "^0.70.0"}
 SQLAlchemy = "^1.4.25"
 mysqlclient = "^2.0.3"
 grpcio = "^1.40.0"
@@ -18,12 +18,10 @@ PyJWT = "^2.1.0"
 bcrypt = "^3.2.0"
 pyodbc = "^4.0.32"
 pymongo = "^3.12.1"
-google-auth-httplib2 = "^0.1.0"
-google-auth-oauthlib = "^0.4.6"
-fastapi-cloud-drives = "^0.1.4"
 pydantic = {extras = ["dotenv"], version = "^1.8.2"}
 email-validator = "^1.1.3"
 python-multipart = "^0.0.5"
+uvicorn = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 
