--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ pydantic = {extras = ["dotenv"], version = "^1.8.2"}
 email-validator = "^1.1.3"
 python-multipart = "^0.0.5"
 uvicorn = "^0.15.0"
+pika = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
