--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
+    "react-select-search": "^3.0.8",
+    "select-search": "0.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
